:memo: 更新设计文档

--- a/Doc/游戏整体设计文档.md
+++ b/Doc/游戏整体设计文档.md
@@ -1,13 +1,39 @@
 # 游戏整体设计文档
-## 游戏名称
+## 1. 游戏名称
+* 中文名称《传奇冒险》
+* 英文名称《LegendQuest》
 
-## 游戏类型
+## 2. 游戏类型
+* 风格:2.5D像素风
+* 定位：融合gls（动作类冒险）、塔防、RTS（即时战略）、模拟经营、养成五种游戏类型
 
+## 3. 游戏核心
+* 通过资源采集、打怪掉落等方式获取物资
+* 通过物资来不断发展自己的据点，抵御源源不断的怪物进攻
+* 此外，对于BOSS级别的怪物，玩家还需要在发展据点的过程中，不断强化自身角色，该角色有装备道具，增益道具，功能性道具，技能等
+* 最后，组件团队是抵御怪物的最好办法，游戏中设定了雇佣兵系统，玩家可以雇佣，使其加入到战斗当中
 
-## 游戏核心
+## 4. 游戏开发内容（一期）
+### 4.1. Map开发
+* 先开发一个关卡地图出来，作为试玩版
+* 自动生成怪物逻辑
 
+### 4.2. Controller开发
+* 玩家控制器开发
+* AI控制器开发
 
-## 游戏玩法
+### 4.3. Actor开发
+* 玩家英雄Actor开发
+* 雇佣兵Actor开发
+* 怪物Actor开发
+* 建筑Actor开发
 
+### 4.4. Module开发
+* 背包系统
+* 建造栏系统
+* 雇佣兵系统
+* 道具系统
 
-## 游戏内容
+### 4.5. UI开发
+* HUD开发
+* 其他子系统，子模块需要UI的地方
